--- a/config/routes/filesyncgo.yaml
+++ b/config/routes/filesyncgo.yaml
@@ -1,4 +1,4 @@
 filesyncgo.trigger:
     path: /filesyncgo/trigger
-    controller: 'PhilTenno\FilesyncGo\Controller\TriggerController::trigger'
+    controller: 'PhilTenno\FileSyncGo\Controller\TriggerController::trigger'
     methods: [POST]
